fix: fix squished dark mode toggle icon in webkit

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ a {
   background-color: transparent;
   cursor: pointer;
   font-size: 20px;
-  height: 8px;
+  height: 21px;
   color: inherit;
 }
 
